5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2503.log
== SUBMITION (2019-05-14 17:49:04) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.145542
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:05) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- ERROR:
File "XXXX", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:06) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.152406
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:30) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.150783
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:31) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- ERROR:
File "XXXX", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:49:31) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.145979
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:32) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- ERROR:
File "XXXX", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:49:33) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( n % 2 == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- ERROR:
File "XXXX", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:34) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.157575
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:35) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.224641
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:35) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.188424
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:53:36) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
	pi = pi + ( 4 / ( 2 * n -1))
	else:
	#par
	pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.140562
-- ERROR:
  File "/home/codebench/codes/1716/2503/main.py", line 6
    pi = pi + ( 4 / ( 2 * n -1))
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:54:55) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
		pi = pi + ( 4 /( 2 * n -1))
	else:
	#par
		pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.133672
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
8.44328707
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
6.6027193
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
6.27583809
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:54:55) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
	#impar
		pi = pi + ( 4 /( 2 * n -1))
	else:
	#par
		pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- OUTPUT:
8.44328707
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:56:52) 
-- CODE:
n = int(input("Digite um texto: "))
pi = 0
while ( n >= 1 ):
	if ( (n % 2) == 1 ):
		#impar
		pi = pi + ( 4 /( 2 * n -1))
	else:
		#par
		pi = pi - ( 4 / ( 2 * n -1))
		
	n = n - 1
print(round(pi,8))

-- EXECUTION TIME:
0.155145
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
